--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,13 +1,8 @@
-button {
-  &.btn-scss {
-    color: green;
-  }
-}
-
-.tailwind-button {
-  @apply bg-transparent text-blue-700 font-semibold py-2 px-4 border border-blue-500 rounded;
-
-  &:hover {
-    @apply bg-blue-500 border-transparent text-white;
-  }
+:host {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
