--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,3 +1,6 @@
+@import "ng-zorro-antd/style/index.min.css"; /* Import basic styles */
+@import "ng-zorro-antd/tooltip/style/index.min.css"; /* Import basic styles */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
