🔥 refactor(app-routing.module.ts): remove unused work-in-progress module route 💄 style(app.component.scss): add comment to explain flexbox usage The work-in-progress module route is removed as it is no longer used. A comment is added to the app.component.scss file to explain the usage of flexbox.

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -19,6 +19,7 @@
 
 app-project {
   @apply flex;
+  /* a-scrollable-container-with-dynamic-height-using-flexbox */
   flex-grow: 1;
   flex-direction: column;
   /* for Firefox */
